--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "knockout.filter",
   "version": "0.0.1",
   "description": "Observable filter for knockout.",
-  "main": "index.js",
+  "main": "dest/knockout.filter.cjs.js",
+  "jsmain:next": "dest/knockout.filter.es6.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build/build.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,27 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/differui/knockout.filter/issues"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "core-js": "^2.4.0",
+    "insert-css": "^0.2.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-rollup-preprocessor": "^2.0.2",
+    "karma-safari-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
+    "robust-mixin": "0.0.5",
+    "rollup": "^0.31.2",
+    "rollup-plugin-babel": "^2.5.1",
+    "rollup-plugin-commonjs": "^3.0.0",
+    "rollup-plugin-node-resolve": "^1.7.0"
   },
   "homepage": "https://github.com/differui/knockout.filter#readme"
 }
