--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "knockout.filter",
   "version": "0.0.2",
-  "description": "Observable filter for knockout.",
+  "description": "Data pipe plugin for Knockout.js",
   "main": "dest/knockout.filter.cjs.js",
   "jsmain:next": "dest/knockout.filter.es6.js",
   "scripts": {
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "pretest": "npm run build",
+    "test": "karma start build/karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,7 @@
     "url": "https://github.com/differui/knockout.filter/issues"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015-rollup": "^1.1.1",
-    "core-js": "^2.4.0",
-    "insert-css": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
@@ -34,11 +33,8 @@
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-safari-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.7",
-    "robust-mixin": "0.0.5",
     "rollup": "^0.31.2",
-    "rollup-plugin-babel": "^2.5.1",
-    "rollup-plugin-commonjs": "^3.0.0",
-    "rollup-plugin-node-resolve": "^1.7.0"
+    "rollup-plugin-babel": "^2.5.1"
   },
   "homepage": "https://github.com/differui/knockout.filter#readme"
 }
