--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/differui/knockout.filter/issues"
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.13.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
