--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "babel-preset-es2015": "6.13.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babelrc-rollup": "^3.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
@@ -34,7 +35,7 @@
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-safari-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.7",
-    "rollup": "^0.31.2",
+    "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.5.1"
   },
   "homepage": "https://github.com/differui/knockout.filter#readme"
